upcxx-2023.9.0/test/neg/neg-serial19.errc
read_into.. invoked on a pointer to a non-TriviallyDestructible type. Since read_into.. does not destruct the underlying object, this is an error if the pointer refers to a live object. If you are certain that the pointer does not refer to a live object, cast the pointer to void\* to bypass this assertion. Otherwise, use read_overwrite.., which does destruct the underlying object.
